# aqua_controller

./: .gitignore  idf_component.yml
docs/: Aqua_Controller_USB_v5.2.md  Gemini.md  Librerias_Valida.md  Plantilla_Prompts.md
esp32_firmware/: .gitignore  CMakeLists.txt  idf_component.yml  sdkconfig.defaults
esp32_firmware/build_test/: .bin_timestamp  .ninja_deps  .ninja_log  app-flash_args  config.env  esp32_firmware.map  flash_args  flasher_args.json  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
esp32_firmware/build_test/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  bootloader.elf  bootloader.map  build.ninja  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
esp32_firmware/build_test/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp32_firmware/build_test/gdbinit/: gdbinit  symbols
esp32_firmware/build_test/log/: idf_py_stderr_output_45556  idf_py_stdout_output_45556  (+1 more)
esp32_firmware/components/usb_comm_aq/: CMakeLists.txt  Kconfig  descriptors_control.c  idf_component.yml  usb_comm_aq.c  usb_mac.c
esp32_firmware/components/usb_comm_aq/include/: usb_comm_aq.h  usb_descriptors.h  usb_mac.h
esp32_firmware/main/: CMakeLists.txt  main.c
prompts/: config_aq_prompt.md  correction_design_prompt.md  fix.md  prompt_usb_mac_descriptor.md  usb_comm_aq_prompt.md
prompts/old/: bios_config.md  bios_config_aq_device_role_fix.md  fix MAC.md  fix2.md  prompt_bios_config_aq.md
tests/: test_usb_comm_aq.c  test_usb_mac.c
(+21 files in other folders)
